# flowstate

./: .dockerignore  .gitignore  CLAUDE.md  COVERAGE_PLAN.md  Cargo.toml  GEMINI.md  README.md  flake.nix
.cargo/: config.toml
.flowstate-output/: output.txt
.githooks/: pre-commit
.github/workflows/: ci.yml
configuration/examples/: runner.env.example
crates/flowstate-core/: Cargo.toml
crates/flowstate-core/src/: api_key.rs  attachment.rs  claude_run.rs  commit.rs  error.rs  label.rs  lib.rs  project.rs  runner.rs  sprint.rs  subtask.rs  task.rs  task_link.rs  task_pr.rs  verification.rs
crates/flowstate-db/: Cargo.toml
crates/flowstate-db/src/: lib.rs  migrations.rs
crates/flowstate-db/src/postgres/: mod.rs
crates/flowstate-db/src/postgres/migrations/: mod.rs
crates/flowstate-db/src/postgres/migrations/sql/: V1__initial.sql  V2__add_required_capability.sql  V3__add_provider_type.sql  V4__add_task_capabilities.sql
crates/flowstate-db/src/postgres/queries/: api_keys.rs  attachments.rs  claude_runs.rs  mod.rs  projects.rs  sprints.rs  task_links.rs  task_prs.rs  tasks.rs
crates/flowstate-db/src/queries/: api_keys.rs  attachments.rs  claude_runs.rs  mod.rs  projects.rs  task_links.rs  task_prs.rs  tasks.rs
crates/flowstate-db/src/sqlite/: migrations.rs  mod.rs
crates/flowstate-db/src/sqlite/queries/: api_keys.rs  attachments.rs  claude_runs.rs  mod.rs  projects.rs  sprints.rs  task_links.rs  task_prs.rs  tasks.rs
crates/flowstate-db/tests/: postgres_parity.rs  sqlite_parity.rs
crates/flowstate-db/tests/common/: mod.rs
crates/flowstate-mcp/: Cargo.toml
crates/flowstate-mcp/src/: main.rs  protocol.rs  server.rs  tools.rs
crates/flowstate-prompts/: Cargo.toml
crates/flowstate-prompts/src/: build.rs  context.rs  design.rs  distill.rs  lib.rs  plan.rs  research.rs  verify.rs
crates/flowstate-runner/: Cargo.toml
crates/flowstate-runner/src/: config.rs  executor.rs  lib.rs  main.rs  pipeline.rs  plan_parser.rs  preflight.rs  process.rs  run_tracker.rs  salvage.rs  subtask_parser.rs  workspace.rs
crates/flowstate-runner/src/backend/: claude_cli.rs  gemini_cli.rs  mock.rs  mod.rs  opencode.rs
crates/flowstate-runner/src/backend/opencode/: mod.rs
crates/flowstate-runner/src/repo_provider/: gitea.rs  github.rs  mock.rs  mod.rs
crates/flowstate-runner/tests/: executor_integration.rs  workspace_integration.rs
crates/flowstate-server/: Cargo.toml
crates/flowstate-server/src/: auth.rs  claude.rs  crypto.rs  lib.rs  main.rs  pod_manager.rs  test_helpers.rs  watchdog.rs
crates/flowstate-server/src/routes/: claude_runs.rs  health.rs  infra.rs  mod.rs  projects.rs  sprints.rs  task_links.rs  task_prs.rs  tasks.rs
crates/flowstate-server/tests/: http_client_integration.rs
crates/flowstate-service/: Cargo.toml
crates/flowstate-service/src/: blocking.rs  http.rs  lib.rs  local.rs  traits.rs
crates/flowstate-store/: Cargo.toml
crates/flowstate-store/src/: lib.rs  local.rs  s3.rs
crates/flowstate-tui/: Cargo.toml
crates/flowstate-tui/src/: app.rs  main.rs
crates/flowstate-tui/src/components/: mod.rs  task_board.rs
crates/flowstate-tui/tests/: app_state_machine.rs
crates/flowstate-verify/: Cargo.toml
crates/flowstate-verify/src/: lib.rs  profiles.rs  runner.rs
docker/runner/: Dockerfile
docker/runpod/: Dockerfile  entrypoint.sh
docker/server/: Dockerfile
docs/: CONFIGURATION.md  RUNPOD_PLAN.md  quickstart.md  runner-gpu.md  runner.md  server.md  testing.md  tui.md
nix/: coverage.nix  garage.nix  gitea.nix  postgres.nix  runner-claude.nix  runner-gemini.nix  runner-opencode.nix
