[workspace]
members = [
    "crates/flowstate-core",
    "crates/flowstate-db",
    "crates/flowstate-service",
    "crates/flowstate-server",
    "crates/flowstate-store",
    "crates/flowstate-verify",
    "crates/flowstate-prompts",
    "crates/flowstate-runner",
    "crates/flowstate-tui",
    "crates/flowstate-mcp",
]
resolver = "2"

[workspace.metadata.crane]
name = "flowstate"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
ratatui = "0.29"
crossterm = "0.28"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors"] }
sha2 = "0.10"
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10"
base64 = "0.22"
bytes = "1"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
runpod = "0.1"
