[package]
name = "flowstate-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cargo-llvm-cov.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
cargo-llvm-cov.workspace = true
