[package]
name = "flowstate-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flowstate-core = { path = "../flowstate-core" }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
