[package]
name = "flowstate-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flowstate-core = { path = "../flowstate-core" }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# SQLite backend (default)
rusqlite = { workspace = true, optional = true }

# Postgres backend
sqlx = { workspace = true, optional = true }

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
postgres = ["dep:sqlx"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
chrono = { workspace = true }
flowstate-core = { path = "../flowstate-core" }
sqlx = { workspace = true }
