[package]
name = "flowstate-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flowstate-mcp"
path = "src/main.rs"

[dependencies]
flowstate-core = { path = "../flowstate-core" }
flowstate-service = { path = "../flowstate-service" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
flowstate-server = { path = "../flowstate-server" }
