[package]
name = "flowstate-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flowstate-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
flowstate-core = { path = "../flowstate-core" }
flowstate-db = { path = "../flowstate-db", default-features = false }
flowstate-service = { path = "../flowstate-service" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
flowstate-store = { path = "../flowstate-store" }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["sqlite"]
sqlite = ["flowstate-db/sqlite"]
postgres = ["flowstate-db/postgres"]
