[package]
name = "flowstate-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flowstate-core = { path = "../flowstate-core" }
flowstate-db = { path = "../flowstate-db", default-features = false }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
flowstate-db = { path = "../flowstate-db", features = ["sqlite"] }
tokio = { workspace = true, features = ["full", "test-util"] }
