[package]
name = "flowstate-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flowstate"
path = "src/main.rs"

[dependencies]
flowstate-core = { path = "../flowstate-core" }
flowstate-db = { path = "../flowstate-db", default-features = false }
flowstate-service = { path = "../flowstate-service" }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
