[package]
name = "flowstate-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flowstate"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
flowstate-core = { path = "../flowstate-core" }
flowstate-db = { path = "../flowstate-db", default-features = false }
flowstate-service = { path = "../flowstate-service" }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
flowstate-server = { path = "../flowstate-server", features = ["test-helpers"] }
tokio = { workspace = true, features = ["full"] }
ratatui = { workspace = true }
