[package]
name = "flowstate-verify"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cargo-llvm-cov = { workspace = true }
flowstate-core = { path = "../flowstate-core" }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
